# sales-eda-regression

./: .gitignore  README.md  config.yaml  iqr_demo.py  pyproject.toml  requirements.txt  sales_api.py  sales_eda.py  sales_monitoring.py  sales_regression.py  streamlit_app.py
output/monitoring/: psi_sales_year_2003_vs_year_2005.json
output/regression/: advanced_metrics.csv  advanced_metrics.parquet  baseline_metrics.csv  baseline_metrics.parquet  sales_baseline_LinearRegression.joblib  sales_regression_best_GradientBoosting_baseline.joblib  sales_regression_best_RandomForest_tuned.joblib
output/summary/: numeric_descriptive_stats.csv  numeric_descriptive_stats.parquet  sales_by_productline.csv  sales_by_productline.parquet  sales_by_year.csv  sales_by_year.parquet  top_countries_by_sales.csv  top_countries_by_sales.parquet
tests/: test_feature_engineering.py  test_iqr.py  test_regression.py  test_regression_pipeline.py  test_remove_outliers.py
