[project]
name = "sales-eda"
version = "0.2.0"
description = "Config-driven EDA and regression baseline for the Kaggle sample sales dataset"
requires-python = ">=3.10"
authors = [{ name = "Mohammad Eslamnia" }]
dependencies = [
  "fastapi",
  "joblib",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "scikit-learn",
  "seaborn",
  "streamlit",
  "uvicorn",
]

[project.scripts]
sales-eda = "sales_eda:main"
sales-regression = "sales_regression:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sales_eda", "sales_regression"]
